k8s_manifest_template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: api-port
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: api
